--- a/公众号名片/tab.html
+++ b/公众号名片/tab.html
@@ -17,8 +17,8 @@
     <div class="content-box">
         <div class="tab-selected">
             <div class="selected-box">
-               <span class="selected-color1">
-               	<li class="selected-delete"></li>
+               <span class="selected-color selected-color1">
+               	 <li class="selected-delete"></li>
                </span>
             </div>  
         	<span class="selected">(已选0/3)</span>
@@ -36,8 +36,8 @@
 	         <div class="tab-content">
 	         	<ul>
 		            <li style="display:block;">
-		            	<p class="active2">快速消费品1</p>
-			            <p>耐用消费品1</p>
+		            	<p class="active2">快速消费品</p>
+			            <p>耐用消费品</p>
 			            <p>零售/批发1</p>
 			            <p>贸易/进出口1</p>
 			            <p>租凭服务1</p>
