--- a/名片/公众号名片/tab.html
+++ b/名片/公众号名片/tab.html
@@ -68,11 +68,11 @@
 				                <div class="skillbar-title"><span>犬瘟热若</span></div>
 				            </div>
 
-				            <div class="skillbar ZZ" data-type="csi" data-percent="ZZ">
+				            <div class="skillbar ZZ" data-type="nationality" data-percent="ZZ">
 				                <div class="skillbar-title"><span>扔帝国时代</span></div>
 				            </div>
 
-				            <div class="skillbar JZ" data-type="csi" data-percent="JZ">
+				            <div class="skillbar JZ" data-type="nationality" data-percent="JZ">
 				                <div class="skillbar-title"><span>当水电费</span></div>
 				           </div>
 
