--- a/名片/公众号名片/tab.html
+++ b/名片/公众号名片/tab.html
@@ -35,69 +35,119 @@
 		         </div>
 		         <div class="tab-content">
 		         	<ul>
-			            <li style="display:block;">
-
-			            	<div class="skillbar PG" data-type="major" data-percent="PG">
-                                <div class="skillbar-title"><span>快速消费品1</span></div>
+			            <li class="skillbar" style="display:block;">
+			            	<div class="a1" sign="a1">
+                                <span>快速消费品1</span>
                             </div>
-				            <div class="skillbar PS"  data-type="major" data-percent="PS">
-				                <div class="skillbar-title"><span>耐用消费品1</span></div>
+				            <div class="a2" sign="a2">
+				                <span>耐用消费品1</span>
 				            </div>
-				            <div class="skillbar SZ" data-type="major" data-percent="SZ">
-				                <div class="skillbar-title"><span>零售/批发1</span></div>
+				            <div class="a3" sign="a3">
+				                <span>零售/批发1</span>
 				            </div>
-				            <div class="skillbar CP" data-type="major" data-percent="CP">
-				                <div class="skillbar-title"><span>阿打算</span></div>
+				            <div class="a4" sign="a4">
+				                <span>阿打算</span>
 				            </div>
-				            <div class="skillbar SM" data-type="major" data-percent="SM">
-				                <div class="skillbar-title"><span>嘎达</span></div>
-				            </div>		
+				            <div class="a5" sign="a5">
+				                <span>嘎达</span>
+				            </div>	
+			             </li>
 
-			            </li>
-			            <li>
-
-				            <div class="skillbar ZG" data-type="nationality" data-percent="ZG">
-	                             <div class="skillbar-title"><span>萨德撒所</span></div>
-				            </div>
-
-				            <div class="skillbar DG" data-type="nationality" data-percent="DG">
-				                 <div class="skillbar-title"><span>为其</span></div>
+			            <li class="skillbar">
+				            <div class="b1" sign="b1">
+	                             <span>萨德撒所</span>
 				            </div>
 
-				            <div class="skillbar QT" data-type="nationality" data-percent="QT">
-				                <div class="skillbar-title"><span>犬瘟热若</span></div>
+				            <div class="b2" sign="b2">
+				                 <span>为其</span>
 				            </div>
 
-				            <div class="skillbar ZZ" data-type="nationality" data-percent="ZZ">
-				                <div class="skillbar-title"><span>扔帝国时代</span></div>
+				            <div class="b3" sign="b3">
+				                <span>犬瘟热若</span>
 				            </div>
 
-				            <div class="skillbar JZ" data-type="nationality" data-percent="JZ">
-				                <div class="skillbar-title"><span>当水电费</span></div>
+				            <div class="b4" sign="b4">
+				                <span>扔帝国时代</span>
+				            </div>
+
+				            <div class="b5" sign="b5">
+				                <span>当水电费</span>
 				           </div>
 
 			            </li>
-			            <li>
-			                <p>快速消费品3</p>
-				            <p>耐用消费品3</p>
-				            <p>零售/批发3</p>
-				            <p>贸易/进出口3</p>
-				            <p>租凭服务3</p>
+
+
+			            <li class="skillbar">
+				            <div class="c1" sign="c1">
+	                             <span>萨德撒所</span>
+				            </div>
+
+				            <div class="c2" sign="c2">
+				                 <span>为其</span>
+				            </div>
+
+				            <div class="c3" sign="c3">
+				                <span>犬瘟热若</span>
+				            </div>
+
+				            <div class="c4" sign="c4">
+				                <span>扔帝国时代</span>
+				            </div>
+
+				            <div class="c5" sign="c5">
+				                <span>当水电费</span>
+				           </div>
+
 			            </li>
-			            <li>
-			            	<p>快速消费品4</p>
-				            <p>耐用消费品4</p>
-				            <p>零售/批发4</p>
-				            <p>贸易/进出口4</p>
-				            <p>租凭服务4</p>	
+
+
+			            <li class="skillbar">
+				            <div class="d1" sign="d1">
+	                             <span>萨德撒所</span>
+				            </div>
+
+				            <div class="d2" sign="d2">
+				                 <span>为其</span>
+				            </div>
+
+				            <div class="d3" sign="d3">
+				                <span>犬瘟热若</span>
+				            </div>
+
+				            <div class="d4" sign="d4">
+				                <span>扔帝国时代</span>
+				            </div>
+
+				            <div class="d5" sign="d5">
+				                <span>当水电费</span>
+				           </div>
+
 			            </li>
-			            <li>
-			            	<p>快速消费品5</p>
-				            <p>耐用消费品5</p>
-				            <p>零售/批发5</p>
-				            <p>贸易/进出口5</p>
-				            <p>租凭服务5</p>
+
+
+			            <li class="skillbar">
+				            <div class="e1" sign="e1">
+	                             <span>萨德撒所</span>
+				            </div>
+
+				            <div class="e2" sign="e2">
+				                 <span>为其</span>
+				            </div>
+
+				            <div class="e3" sign="e3">
+				                <span>犬瘟热若</span>
+				            </div>
+
+				            <div class="e4" sign="e4">
+				                <span>扔帝国时代</span>
+				            </div>
+
+				            <div class="e5" sign="e5">
+				                <span>当水电费</span>
+				           </div>
+
 			            </li>
+
 			        </ul>
 		        </div>
 		    </div>
