--- a/公众号名片/allform.html
+++ b/公众号名片/allform.html
@@ -25,7 +25,7 @@
              <div class="list">
                  <div class="list-content">
                      <div class="list-img">
-                         <img src="" alt="">
+                         <img src="" alt="">1
                      </div>
                      <div class="list-input">
                          <input class="corporation-name" type="text" placeholder="姓名"><br/>
@@ -38,7 +38,20 @@
                  </div>
                  <div class="list-content">
                      <div class="list-img">
-                         <img src="" alt="">
+                         <img src="" alt="">2
+                     </div>
+                     <div class="list-input">
+                         <input class="corporation-name" type="text" placeholder="姓名"><br/>
+                         <input class="corporation-gender" type="text" placeholder="性别"><br/>
+                         <input class="corporation-section" type="text" placeholder="职能部门">       
+                     </div>
+                     <div class="list-check">
+                         <label><input type="checkbox"><i>✓</i></label>
+                     </div>
+                 </div>
+                 <div class="list-content">
+                     <div class="list-img">
+                         <img src="" alt="">3
                      </div>
                      <div class="list-input">
                          <input class="corporation-name" type="text" placeholder="姓名"><br/>
@@ -55,16 +68,12 @@
     <script src="js/jquery.js"></script>
     <sctipt src="js/allform.js"></sctipt>
     <script type="text/javascript">
-        $('.delete-list').click(function(){
-            if (!$('.list-check input').is(':checked')){ 
-               alert("请选择列表");
-               return false;
-           }else{
-               alert('选择成功')
-             
-           }
-    })
-
+    $('.delete-list').click(function() {
+        $('.list-check input:checked').each(function() { // 遍历选中的checkbox
+            var index = $(this).parents(".list-content").index();  // 获取checkbox所在行的顺序
+            $('.list-content').eq(index).remove();
+        });
+    });
     </script>
 </body>
 </html>
