--- a/公众号名片/complete.html
+++ b/公众号名片/complete.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -32,8 +32,12 @@
                          <input class="corporation-section" type="text" placeholder="职能部门">       
                      </div>
                      <div class="content-top-wx">
+                              <div class="wx-black"><img src="" /></div>
+                              <div class="black"></div>
+                              <!--<div class="close"><img src="img/close.png"></div>-->
                           <a href="javascript:;"><img src="images/156165165.png" alt=""></a>
-                          <img class="wx-img" src="images/15615616.png" alt="">
+                          <a  href="javascript:;"><img class="wx-alert" src="images/15615616.png" alt=""></a>
+                          <img class="wx-img" src="images/wx.png" alt="" style="display: none;">
                      </div>
                    </div>
              </div>
