--- a/公众号名片/activity.html
+++ b/公众号名片/activity.html
@@ -10,39 +10,62 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no" />
+	<link rel="stylesheet" href="css/communal.css">	
 	<link rel="stylesheet" href="css/activity.css">
+	<link rel="stylesheet" href="css/swiper/swiper.min.css">
 </head>
 <body>
-	<div id="content">
-		<div class="content-box">
-			<div class="activity-box">
-				<div class="activity-top"></div>
-				<div class="activity-gray">
-					<div class="activity-yellow"></div>
-				</div>
-				<div class="activity-input">
-					<input type="text" placeholder="请输入活动标题　(限20字)">
-					<span class="inpit-border"></span>
-				</div>
+    <div id="scroll">
+		<div class="swiper-wrapper">
+		    <div class="swiper-slide">
+			<div class="content">
+				<div class="content-box">
+					<div class="activity-box">
+						<div class="activity-top"></div>
+						<div class="activity-gray">
+							<div class="activity-yellow"></div>
+						</div>
+						<div class="activity-input">
+							<input type="text" placeholder="请输入活动标题　(限20字)">
+							<span class="inpit-border"></span>
+						</div>
 
-				<div class="activity-gray">
-					<div class="activity-yellow"></div>
-				</div>
-				<div class="activity-input">
-					<input type="text" placeholder="请输入扫码后转跳的网址">
-					<span class="inpit-border"></span>
-				</div>
+						<div class="activity-gray">
+							<div class="activity-yellow"></div>
+						</div>
+						<div class="activity-input">
+							<input type="text" placeholder="请输入扫码后转跳的网址">
+							<span class="inpit-border"></span>
+						</div>
 
-				<div class="activity-gray">
-					<div class="activity-yellow"></div>
-				</div>
-				<div class="activity-input">
-					<input type="text" placeholder="请输入活动起始时间　(2017-6-1)">
-					<span class="inpit-border"></span>
-				</div>
-				<div class="activity-bottom"></div>
+						<div class="activity-gray">
+							<div class="activity-yellow"></div>
+						</div>
+						<div class="activity-input">
+							<input type="text" placeholder="请输入活动起始时间　(2017-6-1)">
+							<span class="inpit-border"></span>
+						</div>
+						<div class="activity-bottom"></div>
+					</div>
+			    </div>
+			</div>
 			</div>
 		</div>
-	</div>
+    </div>
+	<script src="js/jquery.js"></script>
+	<script src="js/swiper/swiper.jquery.min.js"></script>
+	<script>
+		window.myScroll = null;
+		$(function () {
+			window.myScroll = new Swiper('#scroll', {
+				direction: 'vertical',
+				slidesPerView: 'auto',
+				autoHeight: true,
+				freeMode: true,
+				onSliderMove:function(swiper, event){
+				}
+			})
+		})
+	</script>
 </body>
 </html>
