--- a/公众号名片/activitylist.html
+++ b/公众号名片/activitylist.html
@@ -1,98 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<meta name="viewport" content="width=750, user-scalable=no, target-densitydpi=device-dpi">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
-    <meta http-equiv="Pragma" content="no-cache"/>
-    <meta http-equiv="Expires" content="0"/>
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="format-detection" content="telephone=no" />
+	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+	<meta http-equiv="Pragma" content="no-cache" />
+	<meta http-equiv="Expires" content="0" />
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="format-detection" content="telephone=no" />
+	<link rel="stylesheet" href="css/communal.css">
 	<link rel="stylesheet" href="css/activity.css">
+	<link rel="stylesheet" href="css/swiper/swiper.min.css">
 </head>
+
 <body>
-	<div id="content">
-		<div class="seek-list">
-	    	<input type="text" placeholder="请输入关键字">
-	    	<a class="add-list" href="javascript:;"><img src="images/1654156156.png" alt=""></a>
-		</div>
-		<div class="content-box">
-		    <h4>(注:　活动时间排列顺序为倒序)</h4>
+	<div id="scroll">
+		<div class="swiper-wrapper">
+			<div class="swiper-slide">
+				<div class="content">
+					<div class="seek-list">
+						<input type="text" placeholder="　请输入关键字">
+						<a class="add-list" href="javascript:;"><img src="images/1654156156.png" alt=""></a>
+					</div>
+					<div class="content-box">
+						<h4>(注:　活动时间排列顺序为倒序)</h4>
 
-		 <div class="activity-box">
-				<div class="activity-top"></div>
-				<div class="activity-gray">
-					<div class="activity-yellow"></div>
-				</div>
-				<div class="activity-input">
-					<input type="text" placeholder="请输入活动标题　(限20字)">
-					<span class="inpit-border"></span>
-				</div>
+						<div class="activity-box">
+							<div class="activity-top"></div>
+							<div class="activity-gray">
+								<div class="activity-yellow"></div>
+							</div>
+							<div class="activity-input">
+								<input type="text" placeholder="请输入活动标题　(限20字)">
+								<span class="inpit-border"></span>
+							</div>
 
-				<div class="activity-gray">
-					<div class="activity-yellow"></div>
-				</div>
-				<div class="activity-input">
-					<input type="text" placeholder="请输入扫码后转跳的网址">
-					<span class="inpit-border"></span>
-				</div>
+							<div class="activity-gray">
+								<div class="activity-yellow"></div>
+							</div>
+							<div class="activity-input">
+								<input type="text" placeholder="请输入扫码后转跳的网址">
+								<span class="inpit-border"></span>
+							</div>
 
-				<div class="activity-gray">
-					<div class="activity-yellow"></div>
-				</div>
-				<div class="activity-input">
-					<input type="text" placeholder="请输入活动起始时间　(2017-6-1)">
-					<span class="inpit-border"></span>
-				</div>
-				<div class="activity-hr"></div>
-				<div class="activity-ul">
-					<ul>
-						<li><a href="javascript:;"><img src="images/12341324.png" alt=""></a></li>
-						<li><a href="javascript:;"><img src="images/156165165.png" alt=""></a></li>
-						<li><a href="javascript:;"><img src="images/453453453.png" alt=""></a></li>
-						<li><a href="javascript:;"><img src="images/35434533.png" alt=""></a></li>
-					</ul>
-				</div>
+							<div class="activity-gray">
+								<div class="activity-yellow"></div>
+							</div>
+							<div class="activity-input">
+								<input type="text" placeholder="请输入活动起始时间　(2017-6-1)">
+								<span class="inpit-border"></span>
+							</div>
+							<div class="activity-hr"></div>
+							<div class="activity-ul">
+								<ul>
+									<li><a href="javascript:;"><img src="images/12341324.png" alt=""></a></li>
+									<li><a href="javascript:;"><img src="images/156165165.png" alt=""></a></li>
+									<li class="list-delete">
+										<img src="images/453453453.png" alt="">
+									</li>
+									<li class="wx-alert"><a href="javascript:;"><img src="images/35434533.png" alt=""></a></li>
+								</ul>
+							</div>
+						</div>
+
+						<div class="activity-box">
+							<div class="activity-top"></div>
+							<div class="activity-gray">
+								<div class="activity-yellow"></div>
+							</div>
+							<div class="activity-input">
+								<input type="text" placeholder="请输入活动标题　(限20字)">
+								<span class="inpit-border"></span>
+							</div>
+
+							<div class="activity-gray">
+								<div class="activity-yellow"></div>
+							</div>
+							<div class="activity-input">
+								<input type="text" placeholder="请输入扫码后转跳的网址">
+								<span class="inpit-border"></span>
+							</div>
+
+							<div class="activity-gray">
+								<div class="activity-yellow"></div>
+							</div>
+							<div class="activity-input">
+								<input type="text" placeholder="请输入活动起始时间　(2017-6-2)">
+								<span class="inpit-border"></span>
+							</div>
+							<div class="activity-hr"></div>
+							<div class="activity-ul">
+								<ul>
+									<li><a href="javascript:;"><img src="images/12341324.png" alt=""></a></li>
+									<li><a href="javascript:;"><img src="images/156165165.png" alt=""></a></li>
+									<li class="list-delete">
+											<img src="images/453453453.png" alt="">
+									</li>
+									<li class="wx-alert"><a href="javascript:;"><img src="images/35434533.png" alt=""></a></li>
+								</ul>
+							</div>
+						</div>
+
+						<div class="activity-box">
+							<div class="activity-top"></div>
+							<div class="activity-gray">
+								<div class="activity-yellow"></div>
+							</div>
+							<div class="activity-input">
+								<input type="text" placeholder="请输入活动标题　(限20字)">
+								<span class="inpit-border"></span>
+							</div>
+
+							<div class="activity-gray">
+								<div class="activity-yellow"></div>
+							</div>
+							<div class="activity-input">
+								<input type="text" placeholder="请输入扫码后转跳的网址">
+								<span class="inpit-border"></span>
+							</div>
+
+							<div class="activity-gray">
+								<div class="activity-yellow"></div>
+							</div>
+							<div class="activity-input">
+								<input type="text" placeholder="请输入活动起始时间　(2017-6-3)">
+								<span class="inpit-border"></span>
+							</div>
+							<div class="activity-hr"></div>
+							<div class="activity-ul">
+								<ul>
+									<li><a href="javascript:;"><img src="images/12341324.png" alt=""></a></li>
+									<li><a href="javascript:;"><img src="images/156165165.png" alt=""></a></li>
+									<li class="list-delete">
+											<img src="images/453453453.png" alt="">
+									</li>
+									<li class="wx-alert"><a href="javascript:;"><img src="images/35434533.png" alt=""></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div> 
 			</div>
-
-		 <div class="activity-box">
-				<div class="activity-top"></div>
-				<div class="activity-gray">
-					<div class="activity-yellow"></div>
-				</div>
-				<div class="activity-input">
-					<input type="text" placeholder="请输入活动标题　(限20字)">
-					<span class="inpit-border"></span>
-				</div>
-
-				<div class="activity-gray">
-					<div class="activity-yellow"></div>
-				</div>
-				<div class="activity-input">
-					<input type="text" placeholder="请输入扫码后转跳的网址">
-					<span class="inpit-border"></span>
-				</div>
-
-				<div class="activity-gray">
-					<div class="activity-yellow"></div>
-				</div>
-				<div class="activity-input">
-					<input type="text" placeholder="请输入活动起始时间　(2017-6-1)">
-					<span class="inpit-border"></span>
-				</div>
-				<div class="activity-hr"></div>
-				<div class="activity-ul">
-					<ul>
-						<li><a href="javascript:;"><img src="images/12341324.png" alt=""></a></li>
-						<li><a href="javascript:;"><img src="images/156165165.png" alt=""></a></li>
-						<li><a href="javascript:;"><img src="images/453453453.png" alt=""></a></li>
-						<li><a href="javascript:;"><img src="images/35434533.png" alt=""></a></li>
-					</ul>
-				</div>
-			</div>
 		</div>
+	</div>		
+
+	<!--删除列表弹窗确认-->
+	<div class="black"></div>   <!--black阴影层-->
+	<div class="delete-box">
+		<div class="delete-top">提示</div>
+		<div class="delete-hint">
+			<p style="padding:90px 0 10px 0;">删除活动将丢失活动数据</p>
+			<p>是否删除</p>
+		</div>
+		<a href="javasript:;"><span class="off">取消</span></a>
+		<a href="javasript:;"><span class="on">确认</span></a>
 	</div>
+   <!--微信弹出图-->
+    <div class="wx-black"><img src="" /></div>
+    <!--<div class="close"><img src="img/close.png"></div>-->
+    <img class="wx-img" src="images/wx.png" alt="" style="display: none;">
+
+	<script src="js/jquery.js"></script>
+	<script src="js/swiper/swiper.jquery.min.js"></script>
+	<script src="js/activity.js"></script>
+	<script>
+		window.myScroll = null;
+
+		$(function () {
+			window.myScroll = new Swiper('#scroll', {
+				direction: 'vertical',
+				slidesPerView: 'auto',
+				autoHeight: true,
+				freeMode: true,
+				onSliderMove: function (swiper, event) {
+				}
+			})
+		})
+	</script>
 </body>
+
 </html>
