--- a/公众号名片/tab.html
+++ b/公众号名片/tab.html
@@ -1,160 +1,182 @@
-	<!DOCTYPE html>
-	<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Document</title>
-		<meta name="viewport" content="width=750, user-scalable=no, target-densitydpi=device-dpi">
-	    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
-	    <meta http-equiv="Pragma" content="no-cache"/>
-	    <meta http-equiv="Expires" content="0"/>
-	    <meta name="apple-mobile-web-app-capable" content="yes">
-	    <meta name="apple-mossbile-web-app-status-bar-style" content="black">
-	    <meta name="format-detection" content="telephone=no" />
-		<link rel="stylesheet" type="text/css" href="css/tab.css">
-	</head>
-	<body>
-	<div id="content">
-	    <div class="content-box">
-	        <div class="tab-selected">
-	            <div class="selected-box">
-	               <span class="selected-color">
-	               
-	               </span>
-	            </div>  
-	        	<span class="selected">(已选<span class="selectednum">0</span>/3)</span>
-	        </div>
-		    <div class="tab-box">
-		        <div class="tab-active">
-		            <ul class="tab-title">
-		            	<li class="active1">贸易|批发|零售|租赁业</li>
-		            	<li>交通|运输|物流|仓储</li>
-		            	<li>商业服务</li>
-		            	<li>金融业</li>
-		            	<li>生产/加工/制造</li>
-		            </ul>
-		         </div>
-		         <div class="tab-content">
-		         	<ul>
-			            <li class="skillbar" style="display:block;">
-			            	<div class="a1" sign="a1">
-                                <span>快速消费品1</span>
-                            </div>
-				            <div class="a2" sign="a2">
-				                <span>耐用消费品1</span>
-				            </div>
-				            <div class="a3" sign="a3">
-				                <span>零售/批发1</span>
-				            </div>
-				            <div class="a4" sign="a4">
-				                <span>阿打算</span>
-				            </div>
-				            <div class="a5" sign="a5">
-				                <span>嘎达</span>
-				            </div>	
-			             </li>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<meta name="viewport" content="width=750, user-scalable=no, target-densitydpi=device-dpi">
+	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+	<meta http-equiv="Pragma" content="no-cache"/>
+	<meta http-equiv="Expires" content="0"/>
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mossbile-web-app-status-bar-style" content="black">
+	<meta name="format-detection" content="telephone=no" />
+	<link rel="stylesheet" href="css/communal.css">	
+	<link rel="stylesheet" href="css/tab.css">
+	<link rel="stylesheet" href="css/swiper/swiper.min.css">
+</head>
+<body>
+	<div id="scroll">
+		<div class="swiper-wrapper">
+			<div class="swiper-slide">
+				<div claiss="content">
+					<div class="content-box">
+						<div class="tab-selected">
+							<div class="selected-box">
+							<span class="selected-color">
+							
+							</span>
+							</div>  
+							<span class="selected">(已选<span class="selectednum">0</span>/3)</span>
+						</div>
+						<div class="tab-box">
+							<div class="tab-active">
+								<ul class="tab-title">
+									<li class="active1">贸易|批发|零售|租赁业</li>
+									<li>交通|运输|物流|仓储</li>
+									<li>商业服务</li>
+									<li>金融业</li>
+									<li>生产/加工/制造</li>
+								</ul>
+							</div>
+							<div class="tab-content">
+								<ul>
+									<li class="skillbar" style="display:block;">
+										<div class="a1" sign="a1">
+											<span>快速消费品1</span>
+										</div>
+										<div class="a2" sign="a2">
+											<span>耐用消费品1</span>
+										</div>
+										<div class="a3" sign="a3">
+											<span>零售/批发1</span>
+										</div>
+										<div class="a4" sign="a4">
+											<span>阿打算</span>
+										</div>
+										<div class="a5" sign="a5">
+											<span>嘎达</span>
+										</div>	
+									</li>
 
-			            <li class="skillbar">
-				            <div class="b1" sign="b1">
-	                             <span>萨德撒所</span>
-				            </div>
+									<li class="skillbar">
+										<div class="b1" sign="b1">
+											<span>萨德撒所</span>
+										</div>
 
-				            <div class="b2" sign="b2">
-				                 <span>为其</span>
-				            </div>
+										<div class="b2" sign="b2">
+											<span>为其</span>
+										</div>
 
-				            <div class="b3" sign="b3">
-				                <span>犬瘟热若</span>
-				            </div>
+										<div class="b3" sign="b3">
+											<span>犬瘟热若</span>
+										</div>
 
-				            <div class="b4" sign="b4">
-				                <span>扔帝国时代</span>
-				            </div>
+										<div class="b4" sign="b4">
+											<span>扔帝国时代</span>
+										</div>
 
-				            <div class="b5" sign="b5">
-				                <span>当水电费</span>
-				           </div>
+										<div class="b5" sign="b5">
+											<span>当水电费</span>
+									</div>
 
-			            </li>
-
-
-			            <li class="skillbar">
-				            <div class="c1" sign="c1">
-	                             <span>萨德撒所</span>
-				            </div>
-
-				            <div class="c2" sign="c2">
-				                 <span>为其</span>
-				            </div>
-
-				            <div class="c3" sign="c3">
-				                <span>犬瘟热若</span>
-				            </div>
-
-				            <div class="c4" sign="c4">
-				                <span>扔帝国时代</span>
-				            </div>
-
-				            <div class="c5" sign="c5">
-				                <span>当水电费</span>
-				           </div>
-
-			            </li>
+									</li>
 
 
-			            <li class="skillbar">
-				            <div class="d1" sign="d1">
-	                             <span>萨德撒所</span>
-				            </div>
+									<li class="skillbar">
+										<div class="c1" sign="c1">
+											<span>萨德撒所</span>
+										</div>
 
-				            <div class="d2" sign="d2">
-				                 <span>为其</span>
-				            </div>
+										<div class="c2" sign="c2">
+											<span>为其</span>
+										</div>
 
-				            <div class="d3" sign="d3">
-				                <span>犬瘟热若</span>
-				            </div>
+										<div class="c3" sign="c3">
+											<span>犬瘟热若</span>
+										</div>
 
-				            <div class="d4" sign="d4">
-				                <span>扔帝国时代</span>
-				            </div>
+										<div class="c4" sign="c4">
+											<span>扔帝国时代</span>
+										</div>
 
-				            <div class="d5" sign="d5">
-				                <span>当水电费</span>
-				           </div>
+										<div class="c5" sign="c5">
+											<span>当水电费</span>
+									</div>
 
-			            </li>
+									</li>
 
 
-			            <li class="skillbar">
-				            <div class="e1" sign="e1">
-	                             <span>萨德撒所</span>
-				            </div>
+									<li class="skillbar">
+										<div class="d1" sign="d1">
+											<span>萨德撒所</span>
+										</div>
 
-				            <div class="e2" sign="e2">
-				                 <span>为其</span>
-				            </div>
+										<div class="d2" sign="d2">
+											<span>为其</span>
+										</div>
 
-				            <div class="e3" sign="e3">
-				                <span>犬瘟热若</span>
-				            </div>
+										<div class="d3" sign="d3">
+											<span>犬瘟热若</span>
+										</div>
 
-				            <div class="e4" sign="e4">
-				                <span>扔帝国时代</span>
-				            </div>
+										<div class="d4" sign="d4">
+											<span>扔帝国时代</span>
+										</div>
 
-				            <div class="e5" sign="e5">
-				                <span>当水电费</span>
-				           </div>
+										<div class="d5" sign="d5">
+											<span>当水电费</span>
+									</div>
 
-			            </li>
+									</li>
 
-			        </ul>
-		        </div>
-		    </div>
-	    </div>
+
+									<li class="skillbar">
+										<div class="e1" sign="e1">
+											<span>萨德撒所</span>
+										</div>
+
+										<div class="e2" sign="e2">
+											<span>为其</span>
+										</div>
+
+										<div class="e3" sign="e3">
+											<span>犬瘟热若</span>
+										</div>
+
+										<div class="e4" sign="e4">
+											<span>扔帝国时代</span>
+										</div>
+
+										<div class="e5" sign="e5">
+											<span>当水电费</span>
+									</div>
+
+									</li>
+
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>	
+		</div>
 	</div>
-	    <script src="js/vue.js"></script>
 		<script src="js/jquery.js"></script>
+		<script src="js/swiper/swiper.jquery.min.js"></script>
 	    <script src="js/tab.js"></script>
+		<script>
+			window.myScroll = null;
+
+			$(function () {
+				window.myScroll = new Swiper('#scroll', {
+					direction: 'vertical',
+					slidesPerView: 'auto',
+					autoHeight: true,
+					freeMode: true,
+					onSliderMove:function(swiper, event){
+					}
+				})
+			})
+		</script>
 	</body>
 	</html>
