--- a/公众号名片/allform.html
+++ b/公众号名片/allform.html
@@ -10,70 +10,92 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no" />
+    <link rel="stylesheet" href="css/communal.css">	
     <link rel="stylesheet" href="css/allform.css">
+    <link rel="stylesheet" href="css/swiper/swiper.min.css">
 </head>
 <body>
-	<div id="content">
-         <div class="content-top">
-             <ul>
-                 <li class="retreat"><img src="images/1151515.png" alt=""></li>
-                 <li><input type="text" placeholder="请输入关键字"></li>
-                 <li class="delete-list"><img src="images/1515154.png" alt=""></li>
-             </ul>
-         </div>
-         <div class="content-box">
-             <div class="list">
-                 <div class="list-content">
-                     <div class="list-img">
-                         <img src="" alt="">1
-                     </div>
-                     <div class="list-input">
-                         <input class="corporation-name" type="text" placeholder="姓名"><br/>
-                         <input class="corporation-gender" type="text" placeholder="性别"><br/>
-                         <input class="corporation-section" type="text" placeholder="职能部门">       
-                     </div>
-                     <div class="list-check">
-                         <label><input type="checkbox"><i>✓</i></label>
-                     </div>
-                 </div>
-                 <div class="list-content">
-                     <div class="list-img">
-                         <img src="" alt="">2
-                     </div>
-                     <div class="list-input">
-                         <input class="corporation-name" type="text" placeholder="姓名"><br/>
-                         <input class="corporation-gender" type="text" placeholder="性别"><br/>
-                         <input class="corporation-section" type="text" placeholder="职能部门">       
-                     </div>
-                     <div class="list-check">
-                         <label><input type="checkbox"><i>✓</i></label>
-                     </div>
-                 </div>
-                 <div class="list-content">
-                     <div class="list-img">
-                         <img src="" alt="">3
-                     </div>
-                     <div class="list-input">
-                         <input class="corporation-name" type="text" placeholder="姓名"><br/>
-                         <input class="corporation-gender" type="text" placeholder="性别"><br/>
-                         <input class="corporation-section" type="text" placeholder="职能部门">       
-                     </div>
-                     <div class="list-check">
-                         <label><input type="checkbox"><i>✓</i></label>
-                     </div>
-                 </div>
-             </div>
-         </div>
-    </div>
+    <div id="scroll">
+		<div class="swiper-wrapper">
+			<div class="swiper-slide">
+                <div class="content">
+                    <div class="content-top">
+                        <ul>
+                            <li class="retreat"><img src="images/1151515.png" alt=""></li>
+                            <li><input type="text" placeholder="请输入关键字"></li>
+                            <li class="delete-list"><img src="images/1515154.png" alt=""></li>
+                        </ul>
+                    </div>
+                    <div class="content-box">
+                        <div class="list">
+                            <div class="list-content">
+                                <div class="list-img">
+                                    <img src="" alt="">1
+                                </div>
+                                <div class="list-input">
+                                    <input class="corporation-name" type="text" placeholder="姓名"><br/>
+                                    <input class="corporation-gender" type="text" placeholder="性别"><br/>
+                                    <input class="corporation-section" type="text" placeholder="职能部门">       
+                                </div>
+                                <div class="list-check">
+                                    <label><input type="checkbox"><i>✓</i></label>
+                                </div>
+                            </div>
+                            <div class="list-content">
+                                <div class="list-img">
+                                    <img src="" alt="">2
+                                </div>
+                                <div class="list-input">
+                                    <input class="corporation-name" type="text" placeholder="姓名"><br/>
+                                    <input class="corporation-gender" type="text" placeholder="性别"><br/>
+                                    <input class="corporation-section" type="text" placeholder="职能部门">       
+                                </div>
+                                <div class="list-check">
+                                    <label><input type="checkbox"><i>✓</i></label>
+                                </div>
+                            </div>
+                            <div class="list-content">
+                                <div class="list-img">
+                                    <img src="" alt="">3
+                                </div>
+                                <div class="list-input">
+                                    <input class="corporation-name" type="text" placeholder="姓名"><br/>
+                                    <input class="corporation-gender" type="text" placeholder="性别"><br/>
+                                    <input class="corporation-section" type="text" placeholder="职能部门">       
+                                </div>
+                                <div class="list-check">
+                                    <label><input type="checkbox"><i>✓</i></label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+			</div>
+		</div>
+    </div> 
     <script src="js/jquery.js"></script>
     <sctipt src="js/allform.js"></sctipt>
+    <script src="js/swiper/swiper.jquery.min.js"></script>
     <script type="text/javascript">
     $('.delete-list').click(function() {
         $('.list-check input:checked').each(function() { // 遍历选中的checkbox
-            var index = $(this).parents(".list-content").index();  // 获取checkbox所在行的顺序
+            var index = $(this).parents('.list-content').index();  // 获取checkbox所在行的顺序
             $('.list-content').eq(index).remove();
         });
     });
+
+		window.myScroll = null;
+
+		$(function () {
+			window.myScroll = new Swiper('#scroll', {
+				direction: 'vertical',
+				slidesPerView: 'auto',
+				autoHeight: true,
+				freeMode: true,
+				onSliderMove:function(swiper, event){
+				}
+			})
+		})
     </script>
 </body>
 </html>
