--- a/公众号名片/complete.html
+++ b/公众号名片/complete.html
@@ -10,58 +10,83 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no" />
+    <link rel="stylesheet" href="css/communal.css">	
     <link rel="stylesheet" href="css/form.css">
+    <link rel="stylesheet" href="css/swiper/swiper.min.css">
 </head>
 <body>
-	<div id="content">
-        <div class="content-box">
-            <div class="content-top">
-                <span class="corporation">
-                <p class="ucorporation-p">有才华有限公司</p>
-                <!--<input class="ucorporation" type="text" placeholder="请输入公司名称" readonlyunselectable="on">-->
-                </span>           
-                 <div class="hr1"></div>
-                 <div class="hr2"></div>
-                  <div class="content-top-box">
-                     <div class="content-top-img">
-                         <img src="" alt="">
-                     </div>
-                     <div class="content-top-input">
-                         <input class="corporation-name" type="text" placeholder="姓名"><br/>
-                         <input class="corporation-gender" type="text" placeholder="性别"><br/>
-                         <input class="corporation-section" type="text" placeholder="职能部门">       
-                     </div>
-                     <div class="content-top-wx">
-                              <div class="wx-black"><img src="" /></div>
-                              <div class="black"></div>
-                              <!--<div class="close"><img src="img/close.png"></div>-->
-                          <a href="javascript:;"><img src="images/156165165.png" alt=""></a>
-                          <a  href="javascript:;"><img class="wx-alert" src="images/15615616.png" alt=""></a>
-                          <img class="wx-img" src="images/wx.png" alt="" style="display: none;">
-                     </div>
-                   </div>
-             </div>
-             <div class="content-middle1-input">
-                     <span>手机:</span><input class="uname" type="text" placeholder="请输入手机号码">
-                     <!--<i class="btn-uname"></i>-->
-                     <span class="uname-none"><input class="uname2" type="text" placeholder="请输入手机号码"></span><br/>
-                     <span>固话:</span><input class="ugender" type="text" placeholder="请输入固话"><br/>
-                     <span>邮箱:</span><input class="usection" type="text" placeholder="请输入邮箱">
-             </div>
-             <div class="content-middle2-input">
-                     <span>网站:</span><input class="uofficial" type="text" placeholder="请输入官方网址"><br/>
-                     <span>主营:</span><input class="uindustry" type="text" placeholder="选择行业"><br/>
-                     <span>地址:</span><input class="usite" type="text" placeholder="请输入公司所在地址"><br/>
-                     <span>描述:</span><input class="udescribe" type="text" placeholder="请用一句话描述公司">
-             </div>
-             <div class="content-bottom-input">
-                     <span>微信:</span><input class="uwx" type="text" placeholder="请输入微信号"><br/>
-                     <span>QQ:</span><input class="uqq" type="text" placeholder="请输入QQ号"><br/>
-                     <span>传真:</span><input class="ufax" type="text" placeholder="请输入公司传真">
-             </div>
-         </div>
-    </div>
+    <div id="scroll">
+		<div class="swiper-wrapper">
+			<div class="swiper-slide">
+                <div class="content">
+                    <div class="content-box">
+                        <div class="content-top">
+                            <span class="corporation">
+                            <p class="ucorporation-p">有才华有限公司</p>
+                            <!--<input class="ucorporation" type="text" placeholder="请输入公司名称" readonlyunselectable="on">-->
+                            </span>           
+                            <div class="hr1"></div>
+                            <div class="hr2"></div>
+                            <div class="content-top-box">
+                                <div class="content-top-img">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="content-top-input">
+                                    <input class="corporation-name" type="text" placeholder="姓名"><br/>
+                                    <input class="corporation-gender" type="text" placeholder="性别"><br/>
+                                    <input class="corporation-section" type="text" placeholder="职能部门">       
+                                </div>
+                                <div class="content-top-wx">     
+                                    <a href="javascript:;"><img src="images/156165165.png" alt=""></a>
+                                    <a  href="javascript:;"><img class="wx-alert" src="images/15615616.png" alt=""></a>        
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content-middle1-input">
+                                <span>手机:</span><input class="uname" type="text" placeholder="请输入手机号码">
+                                <!--<i class="btn-uname"></i>-->
+                                <span class="uname-none"><input class="uname2" type="text" placeholder="请输入手机号码"></span><br/>
+                                <span>固话:</span><input class="ugender" type="text" placeholder="请输入固话"><br/>
+                                <span>邮箱:</span><input class="usection" type="text" placeholder="请输入邮箱">
+                        </div>
+                        <div class="content-middle2-input">
+                                <span>网站:</span><input class="uofficial" type="text" placeholder="请输入官方网址"><br/>
+                                <span>主营:</span><input class="uindustry" type="text" placeholder="选择行业"><br/>
+                                <span>地址:</span><input class="usite" type="text" placeholder="请输入公司所在地址"><br/>
+                                <span>描述:</span><input class="udescribe" type="text" placeholder="请用一句话描述公司">
+                        </div>
+                        <div class="content-bottom-input">
+                                <span>微信:</span><input class="uwx" type="text" placeholder="请输入微信号"><br/>
+                                <span>QQ:</span><input class="uqq" type="text" placeholder="请输入QQ号"><br/>
+                                <span>传真:</span><input class="ufax" type="text" placeholder="请输入公司传真">
+                        </div>
+                    </div>
+                </div>
+			</div>
+		</div>
+    </div> 
+    <!--微信弹出图-->
+    <div class="wx-black"><img src="" /></div>
+    <div class="black"></div>
+    <!--<div class="close"><img src="img/close.png"></div>-->
+    <img class="wx-img" src="images/wx.png" alt="" style="display: none;">
+
     <script src="js/jquery.js"></script>
     <script src="js/form.js"></script>
+    <script src="js/swiper/swiper.jquery.min.js"></script>
+    <script>
+		window.myScroll = null;
+
+		$(function () {
+			window.myScroll = new Swiper('#scroll', {
+				direction: 'vertical',
+				slidesPerView: 'auto',
+				autoHeight: true,
+				freeMode: true,
+				onSliderMove:function(swiper, event){
+				}
+			})
+		})
+	</script>
 </body>
 </html>
